--- a/configs/next_ensemble_tiny.yaml
+++ b/configs/next_ensemble_tiny.yaml
@@ -69,16 +69,6 @@ AUGMENTATIONS:
 
 
 
-DIFFUSION:
-  L_SIMPLE_WEIGHT: 0.4
-  NLL_WEIGHT: 0.4
-  BCE_WEIGHT: 0
-  ADV_USE_UPSCALED_HEATMAP: False
-  ADV_SCALE_LOSSES_BY_RESOLUTION: False
-  ADV_USE_NEGATIVE_LEARNING: False
-
-
-
 TRAIN:
   MODEL_TYPE: "main"
   BATCH_SIZE: 1
@@ -123,11 +113,11 @@ TRAIN:
     #    - "o9m6rmfd/last.ckpt" # partition 2
     #    - "o3qce1g2/last.ckpt" # partition 3
   # tiny new 4 - up depths [2,2]
-  ENSEMBLE_MODEL_PATHS:
-    - "b7txfadv/last.ckpt" # partition 0
-    - "zidm5x7g/last.ckpt" # partition 1
-    - "su8xir15/last.ckpt" # partition 2
-    - "z96rsdp3/last.ckpt" # partition 3
+#  ENSEMBLE_MODEL_PATHS:
+#    - "b7txfadv/last.ckpt" # partition 0
+#    - "zidm5x7g/last.ckpt" # partition 1
+#    - "su8xir15/last.ckpt" # partition 2
+#    - "z96rsdp3/last.ckpt" # partition 3
   ENSEMBLE_STRATEGY: "all"
 
 
